<resources>
    <string name="app_name">HealthFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Required_water">Required Water</string>
    <string name="burn_calories">Burn Colories</string>
    <string name="speed_distance">Steps-Pace</string>
    <string name="height_weight">Height-Weight</string>
    <string name="age_calsy">Age Calculator</string>
    <string name="Alaram">Alaram</string>
    <string name="Workout_history">Workout Hstory</string>


    <string name="default_ripple_idle">Hello</string>
    <string name="default_ripple_error">Error</string>

    <string name="ripple_circle">Circle Ripple</string>
    <string name="ripple_square">Square Ripple</string>
    <string name="ripple_triangle">Triangle Ripple</string>
    <string name="ripple_star">Star Ripple</string>
    <string name="ripples">Ripples</string>

    <string name="version">0.3.0</string>

    <string name="about_description">It is a library that renders an awesome ripple effect with an ability to customize the shapes.
        \n\nIt can do a lot of things such as random colors, random position, enable single ripple and more to come in the future.</string>
    <string name="ble_not_supported">Ble not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="scanning">Scanning</string>
    <string name="calculate">Calculate</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="Ant">AntPlus</string>
    <string name="reset">Reset</string>
    <string name="start_wor">StartWorkout</string>
    <string name="na">N/A</string>
    <string name="save">Save</string>



    <string name="training_overview_empty">It seems like you didn\'t used the training functionality, yet. It\'s time to start your training!</string>
    <string name="training_input_message" />
    <string name="training_input_title">Training session</string>
    <string name="activity_title_training">Training</string>
    <string name="hint_training_description">Description</string>
    <string name="hint_training_title">Title</string>
    <string name="hint_training_feeling">Feeling:</string>
    <string name="training_card_calories">kcal</string>
    <string name="training_card_distance_km">km</string>
    <string name="training_card_duration">h</string>
    <string name="training_velocity">km/h</string>
    <string name="training_stop_button">End training now</string>
    <string name="training_default_title">%1$s %4$02d.%3$02d.%2$04d</string>
    <string name="activity_summary_chart_legend_stepgoal">Stepgoal</string>
    <string name="steps">Steps</string>
    <string name="since">Since</string>
    <string name="step_length">Step Length</string>
    <string name="pref_weight" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.weight</string>
    <string name="pref_title_weight">Weight (kg)</string>
    <string name="pref_default_weight" translatable="false">65.0</string>

    <string name="pref_header_general">General</string>
    <string name="pref_group_title_personal_settings">Personalization</string>

    <string name="pref_step_counter_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.step_counter_enabled</string>
    <string name="pref_title_step_counter_enabled">Permanent step counter</string>
    <string name="pref_summary_step_counter_enabled">The app counts your steps in background.</string>

    <string name="pref_use_wake_lock" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock</string>
    <string name="pref_title_use_wake_lock">Keep processor awake</string>
    <string name="pref_summary_use_wake_lock">On some devices the processor falls asleep and prevents counting steps. Enable this to keep the processor awake while counting steps - this may drain your battery!</string>

    <string name="pref_default_daily_step_goal" translatable="false">10000</string>
    <string name="pref_title_daily_step_goal">Personal daily step goal</string>
    <string name="pref_unit_of_length" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.unit_of_length</string>
    <string name="pref_title_unit_of_length">Unit of length</string>
    <string-array name="pref_keys_unit_of_length">
        <item>kilometers</item>
        <item>miles</item>
    </string-array>
    <string-array name="pref_values_unit_of_length" translatable="false">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="unit_of_length_km">1|km|kilometers|km/h</string><!-- 1km = 1km -->
    <string name="unit_of_length_mi">0.621371|mi|miles|mph</string><!-- 1km = 0.621371 miles -->

    <string name="pref_explanation_weight_and_gender">To improve the calculation of the calories please set your weight and gender.</string>
    <string name="pref_summary_notification_permanent">The permanent notification is shown when the app counts your steps in background. You can customize what the app should show you.</string>
    <string name="pref_summary_accelerometer_threshold">The app uses the accelerometer of your device. To optimize the step detection adjust the sensitivity, please.</string>
    <string name="pref_notification_permanent_show_steps" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_steps</string>
    <string name="pref_title_notification_permanent_show_steps">Show number of steps walked today</string>
    <string name="pref_notification_permanent_show_distance" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_distance</string>
    <string name="pref_title_notification_permanent_show_distance">Show distance walked today</string>
    <string name="pref_notification_permanent_show_calories" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_calories</string>
    <string name="pref_title_notification_permanent_show_calories">Show number of calories</string>

    <string name="pref_notification_motivation_alert_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_enabled</string>
    <string name="pref_title_notification_motivation_alert_enabled">Enable motivation alert</string>
    <string name="pref_notification_motivation_alert_time" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_time</string>
    <string name="pref_title_notification_motivation_alert_time">Motivation alert time</string>
    <string name="pref_notification_motivation_alert_texts" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_texts</string>
    <string name="pref_title_notification_motivation_alert_texts">Motivation notification texts</string>
    <string name="pref_notification_motivation_alert_criterion" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_criterion</string>
    <string name="pref_title_notification_motivation_alert_criterion">Motivation alert criterion</string>
    <!-- Will be removed on next update -->
    <string name="pref_daily_step_goal" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.daily_step_goal</string>
    <string name="notification_text_steps">%1$s of %2$s steps walked today.</string>
    <string name="notification_text_distance">%1$.2f %2$s walked today.</string>
    <string name="notification_text_calories">Burned %.2f kcal today.</string>

    <string-array name="pref_default_walking_mode_names">
        <item>Walking</item>
        <item>Running</item>
    </string-array>
    <string-array name="pref_default_walking_mode_step_lenghts" translatable="false">
        <item>0.5</item><!-- step length in meters -->
        <item>0.7</item>
    </string-array>
    <string name="motivation_alert_notification_title">Step Counter</string>
    <string name="pref_walking_mode_learning_active" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.walking_mode_learning_active</string>
    <string name="operation_failed">Failed</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string-array name="pref_default_notification_motivation_alert_messages">
        <item>Come on, it\'s time to walk!</item>
    </string-array>

    <string name="pref_accelerometer_threshold" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.accelerometer_threshold</string>
    <string name="pref_title_accelerometer_threshold">Sensitivity</string>
    <string name="set_age">Set Age</string>
</resources>
