<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_height="120dp">
        <LinearLayout
            android:id="@+id/mLlyBMI"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/icon_bmi"/>
            <TextView
                android:id="@+id/mTxtOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:text="BMI Calculator"/>
        </LinearLayout>
        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"

            android:background="@color/colorAccent_transparent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/icon_water"/>
            <TextView
                android:id="@+id/mTxtTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/Required_water"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@color/colorAccent_transparent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="120dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/icon_calories"/>
            <TextView
                android:id="@+id/mTxtThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/burn_calories"/>
        </LinearLayout>
        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"

            android:background="@color/colorAccent_transparent"/>
        <LinearLayout
            android:id="@+id/mLlyPace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/icon_steps"/>
            <TextView
                android:id="@+id/mTxtFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/speed_distance"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@color/colorAccent_transparent"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="120dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/icon_height_weight"/>
            <TextView
                android:id="@+id/mTxtFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/height_weight"/>
        </LinearLayout>
        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/colorAccent_transparent"/>
        <LinearLayout
            android:id="@+id/mLlyAgeCalsy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/icon_age"/>
            <TextView
                android:id="@+id/mTxtSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/age_calsy"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@color/colorAccent_transparent"/>
    <TextView
        android:id="@+id/mTxtstartWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="@dimen/_20sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/start_wor"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/mLlyBluetooth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:tint="@color/white"
                android:src="@drawable/icon_bluetooth"/>
            <TextView
                android:id="@+id/mTxtseven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:text="@string/bluetooth"/>
        </LinearLayout>
        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/hash"/>
        <LinearLayout
            android:id="@+id/mLlyAntPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:tint="@color/white"
                android:src="@drawable/icon_antplus"/>
            <TextView
                android:id="@+id/mTxtEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:text="@string/Ant"/>
            </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"

        android:background="@color/hash"/>
    <Button
        android:id="@+id/mBtnStartWorkout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="gone"
        android:background="@android:drawable/divider_horizontal_bright"
        android:text="Start Workout"/>
</LinearLayout>
</ScrollView>
